add landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
-<html>
-  <body>
-    test
-  </body>
+<!DOCTYPE html>
+<html lang="en" style="color: rgb(242,14,14);background: #281f32;">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>wizwalker</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+
+<body style="color: rgb(255,255,255);background: rgba(40,32,57,0);">
+    <h1 class="pulse animated infinite" style="text-align: center;color: #e5e0eb;font-family: 'Abril Fatface', serif;transform: rotate(-2deg) scale(1.46);font-size: 65px;">WIZWALKER</h1>
+    <p style="text-align: center;margin-top: 62px;font-family: 'Abril Fatface', serif;font-size: 23px;color: #e5e0eb;"><strong>WIZWALKER DOCS:</strong><br><a href="http://docs.wizwalker.org">wiz walker docs</a><br></p>
+    <p style="text-align: center;color: #e5e0eb;font-family: 'Abril Fatface', serif;font-size: 23px;margin-top: 89px;"><strong>ENIGMATICA SERVER:</strong><br>enigmatica.wizwalker.org<br><a href="https://www.curseforge.com/minecraft/modpacks/enigmatica6">pack download</a>&nbsp;<a href="https://gist.github.com/Shadows-of-Fire/3ce48d94d3277e6b8366c6ed98f0d724"><br>jvm args<br></a>------------------------------------------<br><strong>CREATE SERVER:&nbsp;</strong><br>create.wizwalker.org&nbsp;<a href="https://www.curseforge.com/minecraft/modpacks/create-above-and-beyond"><br>pack download<br></a><br>&nbsp;</p>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+</body>
+
 </html>
